--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -166,10 +166,51 @@ button:focus {
 
 .btn--buy-icon {
   position: absolute;
-  bottom: 10px;
+  padding: 5px;
+  bottom: 5px;
   right: 10px;
-  font-size: 2rem;
+  font-size: 1.7rem;
   color: var(--accent-one);
   z-index: 1000;
   background-color: transparent;
+  cursor: pointer;
+}
+
+/* bear details */
+.bear-details__section {
+  max-width: 945px;
+}
+
+.bear-details__container {
+  margin: 30px auto;
+  padding: 18px;
+  border-radius: 18px;
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 4px 20px -3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+
+.bear-details__img-container {
+  border-radius: 18px;
+  flex: 1 0;
+  min-width: 280px;
+}
+
+.bear-details__img {
+  border-radius: 18px;
+  object-fit: cover;
+  width: 100%;
+}
+
+.bear-details__info-container {
+  display: flex;
+  flex: 1 0;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0 18px;
+  min-width: 280px;
+  max-width: calc(100% - 36px);
 }
