--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -41,6 +41,10 @@ a:hover {
   opacity: 0.8;
 }
 
+ul {
+  padding: 0;
+}
+
 button,
 button:focus {
   border: none;
@@ -72,6 +76,23 @@ button:focus {
   color: var(--accent-one);
 }
 
+.cart-btn__container {
+  position: relative;
+}
+
+.badge--cart {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--secondary);
+  color: white;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 0.8rem;
+}
 /* main */
 
 .main__wrapper {
@@ -214,3 +235,36 @@ button:focus {
   min-width: 280px;
   max-width: calc(100% - 36px);
 }
+
+/* cart */
+.cart__section {
+  margin: 0 auto;
+  max-width: 400px;
+}
+
+.cart__list {
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 4px 20px -3px rgba(0, 0, 0, 0.1);
+  margin: 30px auto;
+  padding: 18px;
+  border-radius: 18px;
+}
+
+.cart-card__container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 10px;
+}
+
+.cart-card__title {
+  flex: 1;
+  font-size: 1rem;
+  color: var(--secondary);
+}
+
+.cart-card__color {
+  flex: 1;
+  font-size: 0.8rem;
+}
+
