--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -133,6 +133,7 @@ input:focus {
 
 .bear-list__container {
   margin-top: 30px;
+  margin-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fill, 300px);
   justify-content: space-evenly;
